k8s/overlays/development/micro1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro1
spec:
  strategy:
    type: Recreate
  template:
    spec:
      terminationGracePeriodSeconds: 0
