k8s/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: micro1.172.17.0.2.xip.io
      http:
        paths:
        - path: /
          backend:
            serviceName: micro1
            servicePort: 3000
    - http:
        paths:
        - path: /app1
          backend:
            serviceName: app1
            servicePort: 80
    - http:
        paths:
        - path: /app2
          backend:
            serviceName: app2
            servicePort: 80
